syntax = "proto3";

package protocols.zkvote;

// subject protocol

// a protocol define a set of reuqest and responses
message SubjectRequest {
    Metadata metadata = 1;

    // method specific data
    string message = 2;
}

message SubjectResponse {
    Metadata metadata = 1;

    // response specific data
    string message = 2;
    repeated Subject subjects = 3;
}

message Subject {
    string title = 1;
    string description = 2;
    string proposer = 3;
}

// identity protocol

message IdentityRequest {
    Metadata metadata = 1;

    // method specific data
    string message = 2;
    bytes subjectHash = 3;
}

message IdentityResponse {
    Metadata metadata = 1;

    // response specific data
    string message = 2;
    bytes subjectHash = 3;
    repeated string identitySet = 4;
}

message BallotRequest {
    Metadata metadata = 1;

    // method specific data
    string message = 2;
    bytes subjectHash = 3;
}

message BallotResponse {
    Metadata metadata = 1;

    // response specific data
    string message = 2;
    bytes subjectHash = 3;
    repeated string ballotSet = 4;
}

// designed to be shared between all app protocols
message Metadata {
    // shared between all requests
    string clientVersion = 1; // client version
    int64 timestamp = 2;     // unix time
    string id = 3;           // allows requesters to use request data when processing a response
    bool gossip = 4;         // true to have receiver peer gossip the message to neighbors
    string nodeId = 5;       // id of node that created the message (not the peer that may have sent it). =base58(multihash(nodePubKey))
    bytes nodePubKey = 6;    // Authoring node Secp256k1 public key (32bytes) - protobufs serielized
    bytes sign = 7;         // signature of message data + method specific data by message authoring node.
}
